# ainfra

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml
.github/workflows/: build.yml  pre-commit.yml
app/: .gitignore  Dockerfile  package-lock.json  package.json  tailwind.config.js
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/api/agent/: route.ts
app/src/app/api/cloud-credentials/: route.ts
app/src/app/api/project/: route.ts
app/src/app/api/prompt/: route.ts
app/src/components/home/: ChatInterface.tsx  CloudCredentialsBanner.tsx  CloudCredentialsPrompt.tsx  CloudTab.tsx  DeleteProjectDialog.tsx  DiagramTab.tsx  EmptyProjectState.tsx  ProjectDialog.tsx  ProjectHeader.tsx  ProjectSidebar.tsx  SettingsTab.tsx  TabNavigation.tsx  TaskErrorNotifier.tsx  index.ts
app/src/components/ui/: button.tsx
app/src/hooks/: useCloudCredentials.ts  useUniquePrompts.ts
app/src/lib/: codeBlockParser.tsx  db.ts  logger.ts
app/src/types/: a2a.ts  index.ts  task.ts
app/tests/: basic.spec.ts  hello-world.spec.ts
backend/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
db/init/: init.sql
